force-app/main/default/objects/Issue_Voucher_Event__e/Issue_Voucher_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used for to update the Order id, Order Channel. Direct Issue</description>
    <label>Issue Voucher Event</label>
    <pluralLabel>Issue Voucher Events</pluralLabel>
</CustomObject>