force-app/main/default/objects/Issue_Voucher_Event__e/fields/Order_Id_Issued__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Issued__c</fullName>
    <description>To store the order id from the TJ issuing the Voucher</description>
    <label>Order Id Issued</label>
    <length>255</length>
    <type>Text</type>
</CustomField>