force-app/main/default/objects/Issue_Voucher_Event__e/fields/Order_Id_Issued_Channel__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Issued_Channel__c</fullName>
    <description>Store the channel from TJ</description>
    <label>Order Id Issued Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>