force-app/main/default/objects/Issue_Voucher_Event__e/fields/Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code__c</fullName>
    <description>Search the Vouchers using the Voucher code to update Order id and Order channel in Voucher.</description>
    <label>Voucher Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>